# ComfyUI_DiffRhythm

./: DiffRhythmNode.py  MWAudioRecorderDR.py  README-CN.md  README.md  diffrhythm_utils.py  pyproject.toml  requirements.txt
g2p/g2p/: __init__.py  chinese_model_g2p.py
model/: trainer.py
