[project]
name = "diffrhythm_mw"
description = "Blazingly Fast and Embarrassingly Simple End-to-End Full-Length Song Generation. A node for ComfyUI."
version = "2.1.1"
license = {file = "LICENSE"}
dependencies = ["LangSegment", "x-transformers", "pylance", "ema-pytorch", "prefigure", "muq", "mutagen", "pyopenjtalk", "pykakasi", "Unidecode", "phonemizer"]

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_DiffRhythm"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "ComfyUI_DiffRhythm_MW"
Icon = "https://github.com/billwuhao/aiart.website/blob/master/hb.png"
